# QPlugs

./: CMakeLists.txt  README.md  main.cpp  resource.qrc
include/: camera_control.h  face_identify.h  q_change_label.h  q_modules_widget.h  qui_code_identify_widget.h  qui_debug_log_window.h  qui_face_identify_widget.h  qui_login_widget.h  qui_manage_widget.h  qui_module_label.h  qui_modules_web_widget.h
interface-file/: qui_code_identify_widget.ui  qui_debug_log_window.ui  qui_face_identify_widget.ui  qui_login_widget.ui  qui_manage_widget.ui  qui_module_label.ui  qui_modules_web_widget.ui
resources/: dog.jepg  resize.py  svg2png-w.py
src/: camera_control.cpp  face_identify.cpp  main.cpp  q_change_label.cpp  q_modules_widget.cpp  qui_code_identify_widget.cpp  qui_debug_log.cpp  qui_face_identify_widget.cpp  qui_login_widget.cpp  qui_manage_widget.cpp  qui_module_label.cpp  qui_modules_web_widget.cpp
test/: error.html  index.html  trainer.yml
xml/: test2Module.xml  testModule.xml
